# topos

./: .gitignore  MEMORY_TOPOS.md  README.md  _GEMINI.md  angular.json  fortification_planner.html  package-lock.json  package.json  plan_mach_quantity.md  task.md  test_plan.md
.agents/: AGENTS.md  soul.md  user.md
Logs/: 2026-07-13.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  plan_archive_export_shift.md
public/: military.geojson
public/symbols/: manifest.json
scripts/: add_categories.js  analyze_symbols.js  clean_svgs.js  compare_calculations.py  download_military.js  extract_blindage_formulas.py  extract_formulas.py  fix_svg_dimensions.js  generate_contours.js  generate_manifest.js  generate_symbols.js  inspect_excel.py  rename_and_manifest.js
scripts/win7_compat/: patch_win7.py  shims.rs  winadv32.def  winker32.def
src/: index.html  styles.css
src-tauri/: .gitignore  Cargo.toml  bcryptprimitives.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: export_map_native.toml  read_pmtiles_chunk.toml  save_scenario_file.toml
src-tauri/sidecar-renderer/: index.js  package-lock.json  package.json
src-tauri/src/: lib.rs
src/app/: app.css  app.routes.ts  app.spec.ts  app.ts
src/app/consts/: map-layers.ts  map-urls.ts
src/app/features/map-view/: map-view.css  map-view.html  map-view.spec.ts  map-view.ts
src/app/features/map-view/consts/: draw-styles.const.ts  map-scale.const.ts  military-layers.const.ts  tactical-symbols.const.ts
(+68 files in other folders)
